--- a/project.config.json
+++ b/project.config.json
@@ -23,9 +23,9 @@
 		}
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.10.2",
+	"libVersion": "2.10.3",
 	"appid": "wxe42f7d60f41362de",
-	"projectname": "HelloWorld",
+	"projectname": "showapps",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
